# mb-cli

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml  use_case.md
src/mb_cli/: __init__.py  __main__.py  auth.py  cache.py  client.py  config.py  daemon.py  exceptions.py  filters.py  formatters.py  mcp_server.py  notifications.py
src/mb_crawler/: __main__.py  cache.py  client.py  config.py  daemon.py  exceptions.py  filters.py  formatters.py  mcp_server.py  notifications.py
tests/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_config.py  test_daemon.py  test_exceptions.py  test_filters.py  test_formatters.py  test_main.py  test_mcp_server.py  test_new_features.py  test_notifications.py
