[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mb-crawler"
version = "0.2.0"
description = "Crawl ManageBac tasks, grades & submission states"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Allen" }]
keywords = ["managebac", "crawler", "scraper", "tasks", "grades"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.20"]

[project.scripts]
mb-crawler = "mb_crawler.__main__:main"
mb-mcp = "mb_crawler.mcp_server:main"

[project.urls]
Homepage = "https://github.com/allen/mb-crawler"
